--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 *{
-    text-decoration: none;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 body{
+    width: 100%;
+    min-height: 100vh;
     background-color: #66b8db;
     font-family: "Nothing You Could Do";
     font-weight: 200;
