--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,16 @@ body{
     padding:15%;
 }
 
+/*for pg 2*/
+#box2{
+    display:flexbox;
+    flex-direction: column;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+    padding:15%;
+}
+/**/
+
 section{
     text-align: center;
 }
@@ -35,6 +45,7 @@ font-size: 180px;
 }
 
 /*for all pgs*/
+/*referenced from:https://jwoakley.github.io/projectTwoExamples/kimberly/index.html*/
 #faded {
     animation-name: faded;
     animation-delay: 1.2s;
@@ -75,6 +86,7 @@ font-size: 180px;
     }
 }
 
+/*referenced from: https://jwoakley.github.io/projectTwoExamples/kimberly/index.html and https://jwoakley.github.io/projectTwoExamples/donovan/index.html*/
 strong {
     font-style: normal;
     animation-name: pulse;
@@ -96,7 +108,7 @@ strong {
     }
 }   
 
-/*1st pg animations*/
+/*referenced from: https://www.cssportal.com/css-animated-text-generator/ */
 #cry {
     color:antiquewhite;
     animation-name: cry;
@@ -116,6 +128,7 @@ strong {
 
 
 /*animation for 'fooled' 2nd pg*/
+/*referenced from: https://www.cssportal.com/css-animated-text-generator/ */
 svg {
 	font-family: "Nothing You Could Do", sans-serif;
 	width: 100%; height: 100%;
@@ -123,7 +136,7 @@ svg {
     font-size: 80px;
 }
 svg text {
-	animation: stroke 10s infinite alternate-reverse;
+	animation: stroke 6s infinite alternate-reverse;
 	stroke-width: 2;
     stroke: #A00000;
 }
@@ -145,6 +158,7 @@ svg text {
 .wrapper {background-color:none};
 
 /*animation for last pg*/
+/*referenced from: https://jwoakley.github.io/projectTwoExamples/zanett/index.html */
 #box2{
     display: flex;
     flex-direction: column;
@@ -256,4 +270,9 @@ svg text {
         opacity: 1;
         font-size: 140px;
     }
+}
+
+/*footer*/
+.foot{
+    text-align: right;
 }
